Add Controller Tests